--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h2>
+<!-- <h2>
   Tab Panel
 </h2>
 
@@ -7,10 +7,10 @@
   <ng-template #headerButtons>
     <button (click)="tabPanel.selectTab(loginTab)">Login</button>
     <button (click)="tabPanel.selectTab(signUpTab)">Sign Up</button>
-  </ng-template>
+  </ng-template> -->
 
-  <!-- [headerTemplate]="headerButtons"  -->
-  <sfc-tab-panel id="tab-panel" #tabPanel> 
+<!-- [headerTemplate]="headerButtons"  -->
+<!-- <sfc-tab-panel id="tab-panel" #tabPanel> 
 
     <sfc-tab title="Login" #loginTab>
       <form>
@@ -51,4 +51,75 @@
 
   </sfc-tab-panel>
 
-</div>
+</div> -->
+
+<body>
+  <div class="container">
+
+    <h1>Modal Examples</h1>
+
+    <ng-template #authModalBody let-title="title" let-loginTabActive="loginTabActive">
+
+      <h5>{{title}}</h5>
+
+      <sfc-tab-panel id="tab-panel" #tabPanel>
+
+        <sfc-tab title="Login" #loginTab [selected]="loginTabActive">
+          <form>
+            <div class="form-field">
+              <label>Email:</label>
+              <input class="login-email">
+            </div>
+            <div class="form-field">
+              <label>Password:</label>
+              <input>
+            </div>
+          </form>
+        </sfc-tab>
+
+        <sfc-tab title="Sign Up" #signUpTab [selected]="!loginTabActive">
+          <form>
+            <div class="form-field">
+              <label>Email:</label>
+              <input>
+            </div>
+            <div class="form-field">
+              <label>Password:</label>
+              <input>
+            </div>
+            <div class="form-field">
+              <label>Confirm Password:</label>
+              <input>
+            </div>
+          </form>
+        </sfc-tab>
+
+      </sfc-tab-panel>
+    </ng-template>
+
+    <sfc-modal #modal class="auth-modal" 
+      [hideOnEsc]="true" 
+      [hideOnClickOutside]="true" 
+      [body]="authModalBody" 
+      [context]="{title:title, loginTabActive: loginActive}"
+      *sfcModalOpenOnClick="[loginButton, signUpButton]">
+
+      <i class="fa fa-times" (click)="modal.close()"></i>
+
+    </sfc-modal>
+
+    <sfc-modal id="testModal" *sfcModalOpenOnClick="testButton"></sfc-modal>
+
+    <div class="modal-buttons">
+
+      <button #loginButton (click)="setLoginActive(true)">Login</button>
+
+      <button #signUpButton (click)="setLoginActive(false)">Sign Up</button>
+
+      <button id="testButton" #testButton>Test</button>
+
+    </div>
+
+  </div>
+
+</body>
