final result for sfc button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
   <div class="header">
     <a routerLink="" class="logo">SFC components</a>
     <div class="header-right" routerLinkActive="menu-active">
-      <a routerLinkActive="menu-active" routerLink="buttons-app">Buttons</a>
-      <a routerLinkActive="menu-active" routerLink="tabs-app">Tabs</a>
+      <a routerLinkActive="menu-active" routerLink="button-app">Buttons</a>
+      <a routerLinkActive="menu-active" routerLink="modal-app">Modals</a>
     </div>
   </div>
 
