--- a/src/modal-app/modal-app.component.html
+++ b/src/modal-app/modal-app.component.html
@@ -1,5 +1,5 @@
 <div class="demo-container">
-    <h1>BUTTONS</h1>
+    <h1>MODALS</h1>
     <div class="theme-switcher">
         <button (click)="changeTheme('common')">Common</button>
         <button (click)="changeTheme('dark')">Dark</button>
@@ -8,12 +8,16 @@
     <div class="background"
         [ngClass]="(theme=='common')?'default-background':['sfc-component-dark-theme', 'dark-background']">
         <div class="component-container">
+            <!-- 
+            <hr>
+            <h3>Default(bordered):</h3>
+            <hr> -->
+
             <div class="component-row">
                 <div>
-                    TEST
+                    TEST MODAL
                 </div>
             </div>
-
         </div>
     </div>
 </div>
