--- a/projects/sfc-components/src/lib/sfc-modal/sfc-modal.component.css
+++ b/projects/sfc-components/src/lib/sfc-modal/sfc-modal.component.css
@@ -1,36 +1,96 @@
-.modal-body {
-  position: absolute;
-  display: inline-block;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 20;
-  border: 1px solid rgba(0, 0, 0, 0.117647);
-  border-radius: 4px;
-  background: white;
-  box-shadow: 0 1px 16px 0 rgba(0, 0, 0, 0.2), 0 2px 8px 0 rgba(0, 0, 0, 0.14), 0 4px 8px -1px rgba(0, 0, 0, 0.12);
+/* CONTENT */
+
+.modal-content {
+  display: flex;
+  align-items: center;
+  position: relative;
+  margin: 0 auto;
+  background-color: #ffffff;
+  max-width: 75rem;
+  border-radius: 3px;
+  opacity: 1;
+  overflow-y: auto;
+  visibility: visible;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  transform: scale(1);
+  transition: all 0.4s cubic-bezier(0.55, 0, 0.1, 1);
+  flex-direction: column;
+  animation: expandModal 0.4s cubic-bezier(0.55, 0, 0.1, 1);
 }
+
+:host(.hided) .modal-content {
+  opacity: 0;
+  visibility: hidden;
+  transform: scale(1.2);
+}
+
+/* END CONTENT */
+
+/* OVERLAY */
 
 .modal-overlay {
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  left: 0;
-  top: 0;
-  background: rgba(51, 51, 51, 0.7);
-  z-index: 10;
+  z-index: 9999;
+  background-color: rgba(0, 0, 0, 0.6);
+  opacity: 1;
+  visibility: visible;
+  backface-visibility: visible;
+  transition: opacity 0.4s cubic-bezier(0.55, 0, 0.1, 1), visibility 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+  animation: expandOverlay 0.4s cubic-bezier(0.55, 0, 0.1, 1);
 }
 
-:host .close-icon  {
+:host(.hided) .modal-overlay {
+  opacity: 0;
+  visibility: hidden;
+}
+
+/* END OVERLAY */
+
+.modal-header, .modal-footer {
+  flex: 0 0 auto;
+  overflow: hidden;
+  font-size: 20px;
+  font-weight: 500;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   width: 100%;
-  height: 20px;
+  color: #545e61;
+  flex-direction: row;
+  display: flex;
+  /* justify-content: space-between; */
+  justify-content: center;
 }
 
-:host .close-icon ::ng-deep i {
-  position: fixed;
-  cursor: pointer;
-  top: 2px;
-  right: 2px;
-  height: 15px;
+.modal-body {
+  padding: 10px 15px;
+}
+
+.content-template:empty {
+  display: none;
+}
+
+sfc-default-modal-header, sfc-default-modal-footer {
+  width: 100%;
+}
+
+@keyframes expandOverlay {
+  from {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+@keyframes expandModal {
+  from {
+    visibility: hidden;
+    opacity: 0;
+    transform: scale(1.2);
+  }
 }
