--- a/projects/sfc-components/src/lib/sfc-modal/sfc-modal.component.html
+++ b/projects/sfc-components/src/lib/sfc-modal/sfc-modal.component.html
@@ -1,18 +1,53 @@
-<div class="modal-overlay" (click)="onClickOutsideModal()">
-    <div class="modal-body" (click)="cancelClick($event)">
+<div class="modal-overlay" (click)="onClickOutsideModal()" (transitionend)="transitionEnd($event)">
+    <div class="modal-content" (click)="cancelClick($event)">
 
-        <div class="close-icon">
-            <ng-content select="i"></ng-content>
+        <div class="modal-header">
+
+            <ng-container *ngIf="header;else headerTemplate">
+                <ng-container *ngTemplateOutlet="header;context:context"></ng-container>
+            </ng-container>
+
+            <ng-template #headerTemplate>
+                <div class="content-template" #headerContent>
+                    <ng-content select="[header]"></ng-content>
+                </div>
+            </ng-template>
+
+            <ng-container *ngIf="isShowDefaultHeader">
+                <sfc-default-modal-header [config]="defaultHeaderConfig" (closed)="close()"></sfc-default-modal-header>
+            </ng-container>
+
+        </div>
+        
+        <div class="modal-body">
+
+            <ng-container *ngIf="body;else bodyTemplate">
+                <ng-container *ngTemplateOutlet="body;context:context"></ng-container>
+            </ng-container>
+
+            <ng-template #bodyTemplate>
+                <ng-content select="[body]"></ng-content>
+            </ng-template>
+
         </div>
 
-        <ng-container *ngIf="body" else projectContent>
-            <ng-container *ngTemplateOutlet="body;context:context"></ng-container>
-        </ng-container>
+        <div class="modal-footer">
 
-        <ng-template #projectContent>
-            <ng-content></ng-content>
-        </ng-template>
+            <ng-container *ngIf="footer;else footerTemplate">
+                <ng-container *ngTemplateOutlet="footer;context:context"></ng-container>
+            </ng-container>
 
-        <ng-content></ng-content>
+            <ng-template #footerTemplate>
+                <div class="content-template" #footerContent>
+                    <ng-content select="[footer]"></ng-content>
+                </div>
+            </ng-template>
+
+            <ng-container *ngIf="isShowDefaultFooter">
+                <sfc-default-modal-footer [config]="defaultFooterConfig" (closed)="close()" (ok)="close()">
+                </sfc-default-modal-footer>
+            </ng-container>
+
+        </div>
     </div>
 </div>
