--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     <div class="header-right" routerLinkActive="menu-active">
       <a routerLinkActive="menu-active" routerLink="button-app">Buttons</a>
       <a routerLinkActive="menu-active" routerLink="modal-app">Modals</a>
+      <a routerLinkActive="menu-active" routerLink="tab-app">Tabs</a>
     </div>
   </div>
 
