--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,7 +13,12 @@
 
 .component-row > div{
   flex-basis: 33%;
-  margin: 20px 0;
+  margin: 20px 0px;
+}
+
+.component-row > div.half{
+  flex-basis: 50%;
+  margin: 20px 20px;
 }
 
 .background{
