--- a/projects/sfc-components/src/lib/sfc-tabs/sfc-tab-panel.component.html
+++ b/projects/sfc-components/src/lib/sfc-tabs/sfc-tab-panel.component.html
@@ -1,24 +1,26 @@
-<!-- <ng-template #defaultTabsHeader let-tabs="tabs"> -->
-<!-- <ul class="tab-panel-buttons" >
-        <li [ngClass]="{selected: tab.selected}" *ngFor="let tab of tabs" (click)="selectTab(tab)">{{tab.title}}</li>
-    </ul> -->
-<!-- <div *ngIf="tabs">
-    <sfc-line-tab *ngFor="let tab of tabs" (click)="selectTab(tab)" id="{{tab.id}}" title="{{tab.title}}"></sfc-line-tab>
-</div> -->
+<div class="tabs-header">
+    <div class="tab-header-container">
+        <div class="tab-label" [style.width.%]="100 / tabs.length" (click)="selectTab(item)" [class.active]="activeTab === item"
+            *ngFor="let item of tabItems$ | async">
+            <ng-container *ngIf="item.labelComponent">
+                <ng-container *ngTemplateOutlet="item.labelComponent.labelTemplate">
+                </ng-container>
+            </ng-container>
 
-<!-- </ng-template> -->
-
-<!-- <ng-template #lineTabsHeader>
-    <sfc-line-tab *ngFor="let tab of tabItems"></sfc-line-tab>   
-</ng-template> -->
-
-<!-- <ng-container #test *ngTemplateOutlet="headerTemplate ? headerTemplate : defaultTabsHeader; context:tabsContext">    
-</ng-container> -->
-
-<div class="tab-content">
-    <ng-content></ng-content>        
+            <ng-container *ngIf="!item.labelComponent">
+                {{ item.label }}
+            </ng-container>
+        </div>
+    </div>
+    <sfc-line-tab-slider *ngIf="type == 'line'" [length]="tabs.length" [selected-index]="selectedIndex">
+    </sfc-line-tab-slider>
+    <sfc-icon-tab-slider *ngIf="type == 'icon'" [length]="tabs.length" [selected-index]="selectedIndex">
+    </sfc-icon-tab-slider>
 </div>
 
-<sfc-line-tab-slider *ngIf="type == 'line'" [length]="tabs.length" [selected-index]="selectedIndex"></sfc-line-tab-slider>
-<sfc-icon-tab-slider *ngIf="type == 'icon'" [length]="tabs.length" [selected-index]="selectedIndex"></sfc-icon-tab-slider>
-
+<div class="tabs-body">
+    <ng-container *ngIf="activeTab && activeTab.bodyComponent">
+        <ng-container *ngTemplateOutlet="activeTab.bodyComponent.bodyContent">
+        </ng-container>
+    </ng-container>
+</div>
