--- a/projects/sfc-components/src/lib/sfc-tabs/sfc-tab/sfc-icon-tab/sfc-icon-tab.component.html
+++ b/projects/sfc-components/src/lib/sfc-tabs/sfc-tab/sfc-icon-tab/sfc-icon-tab.component.html
@@ -1,12 +1,9 @@
-<div>
-    <input type="radio" name="tabs" id="sfc-{{id}}" [checked]="selected" (change)="selectValue()">
+<div [class.selected]="selected">
+    <input type="radio" name="tabs" id="sfc-line-tab-{{id}}" [checked]="selected" [disabled]="disabled" (change)="selectValue()">
     <div class="tab-label-content" id="{{id}}-content">
-        <label for="sfc-{{id}}" role="button">
-            <i *ngIf="icon" class="icon" [ngClass]="iconClass"></i>
+        <label for="sfc-line-tab-{{id}}" role="button">
+            <i class="icon" [ngClass]="iconClass"></i>
             <span>{{title}}</span>
         </label>
-        <div class="tab-content">
-            <ng-content *ngIf="selected"></ng-content>
-        </div>
     </div>
 </div>
