--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,12 +12,17 @@
 }
 
 .component-row > div{
-  flex-basis: 33%;
-  margin: 20px 0px;
+  flex-basis: 30%;
+  margin: 20px 20px;
 }
 
 .component-row > div.half{
-  flex-basis: 50%;
+  flex-basis: 47%;
+  margin: 20px 20px;
+}
+
+.component-row > div.full{
+  flex-basis: 100%;
   margin: 20px 20px;
 }
 
