--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
       <a routerLinkActive="menu-active" routerLink="modal-app">Modals</a>
       <a routerLinkActive="menu-active" routerLink="tab-app">Tabs</a>
       <a routerLinkActive="menu-active" routerLink="side-menu-app">Side Menu</a>
+      <a routerLinkActive="menu-active" routerLink="navigation-menu-app">Navigation Menu</a>
     </div>
   </div>
 
