--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
       <a routerLinkActive="menu-active" routerLink="tab-app">Tabs</a>
       <a routerLinkActive="menu-active" routerLink="side-menu-app">Side Menu</a>
       <a routerLinkActive="menu-active" routerLink="navigation-menu-app">Navigation Menu</a>
+      <a routerLinkActive="menu-active" routerLink="avatar-app">Avatar</a>
     </div>
   </div>
 
