--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
       <a routerLinkActive="menu-active" routerLink="side-menu-app">Side Menu</a>
       <a routerLinkActive="menu-active" routerLink="navigation-menu-app">Navigation Menu</a>
       <a routerLinkActive="menu-active" routerLink="avatar-app">Avatar</a>
+      <a routerLinkActive="menu-active" routerLink="stars-app">Stars</a>
     </div>
   </div>
 
