--- a/src/avatar-app/avatar-app.component.html
+++ b/src/avatar-app/avatar-app.component.html
@@ -85,6 +85,10 @@
                 <div>
                     <sfc-avatar [progress]="11" [info]="avatarCaptainInjured"></sfc-avatar>
                 </div>
+
+                <div>
+                    <sfc-avatar [progress]="59" [show-stars]="true" [info]="avatarInfo"></sfc-avatar>
+                </div>
             </div>
         </div>
     </div>
