--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
       <a routerLinkActive="menu-active" routerLink="navigation-menu-app">Navigation Menu</a>
       <a routerLinkActive="menu-active" routerLink="avatar-app">Avatar</a>
       <a routerLinkActive="menu-active" routerLink="stars-app">Stars</a>
+      <a routerLinkActive="menu-active" routerLink="progress-app">Progress</a>
     </div>
   </div>
 
