--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
       <a routerLinkActive="menu-active" routerLink="avatar-app">Avatar</a>
       <a routerLinkActive="menu-active" routerLink="stars-app">Stars</a>
       <a routerLinkActive="menu-active" routerLink="progress-app">Progress</a>
+      <a routerLinkActive="menu-active" routerLink="tags-app">Tags</a>
     </div>
   </div>
 
