dropdown menu dev

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
       <a routerLinkActive="menu-active" routerLink="tab-app">Tabs</a>
       <a routerLinkActive="menu-active" routerLink="side-menu-app">Side Menu</a>
       <a routerLinkActive="menu-active" routerLink="navigation-menu-app">Navigation Menu</a>
+      <a routerLinkActive="menu-active" routerLink="dropdown-menu-app">Dropdown Menu</a>
       <a routerLinkActive="menu-active" routerLink="avatar-app">Avatar</a>
       <a routerLinkActive="menu-active" routerLink="stars-app">Stars</a>
       <a routerLinkActive="menu-active" routerLink="progress-app">Progress</a>
