--- a/projects/sfc-components/src/lib/sfc-button/sfc-button.component.html
+++ b/projects/sfc-components/src/lib/sfc-button/sfc-button.component.html
@@ -1,4 +1,4 @@
-<a id="sfc-{{id}}" class="sfc-button" [ngClass]="buttonClasses" [ngStyle]="buttonStyles">
+<a id="sfc-{{id}}" class="sfc-button" [ngClass]="buttonClasses" [ngStyle]="buttonStyles" (click)="onClick.emit($event)">
     <i *ngIf="iconBefore" class="icon before" [ngClass]="getIconClass(iconBefore)"></i>
     <span class="button-text">{{text}}</span>
     <i *ngIf="iconAfter" class="icon after" [ngClass]="getIconClass(iconAfter)"></i>
