--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,7 @@
       <a routerLinkActive="menu-active" routerLink="stars-app">Stars</a>
       <a routerLinkActive="menu-active" routerLink="progress-app">Progress</a>
       <a routerLinkActive="menu-active" routerLink="tags-app">Tags</a>
+      <a routerLinkActive="menu-active" routerLink="carousel-app">Carousels</a>
     </div>
   </div>
 
