--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
       <a routerLinkActive="menu-active" routerLink="progress-app">Progress</a>
       <a routerLinkActive="menu-active" routerLink="tags-app">Tags</a>
       <a routerLinkActive="menu-active" routerLink="carousel-app">Carousels</a>
+      <a routerLinkActive="menu-active" routerLink="slider-app">Slider</a>
     </div>
   </div>
 
