--- a/projects/sfc-components/src/lib/sfc-menu/navigation/navigation-menu-item/sfc-navigation-menu-item.component.html
+++ b/projects/sfc-components/src/lib/sfc-menu/navigation/navigation-menu-item/sfc-navigation-menu-item.component.html
@@ -1,4 +1,5 @@
 <div class="nav-item" [class.active]="item.isActive">
     <i [ngClass]="iconClass"></i>
     <span class="nav-item-text">{{item.label}}</span>
+    <sfc-alert></sfc-alert>
 </div>
