--- a/projects/sfc-components/src/lib/sfc-menu/navigation/navigation-menu-item/sfc-navigation-menu-item.component.css
+++ b/projects/sfc-components/src/lib/sfc-menu/navigation/navigation-menu-item/sfc-navigation-menu-item.component.css
@@ -16,6 +16,7 @@
     cursor: pointer;
     border-radius: 10px;
     transition: background 0.2s ease-in-out;
+    position: relative;
 }
 
 .nav-item:hover, .nav-item.active {
@@ -39,4 +40,5 @@
     font-size: 15px;
     font-weight: bold;
     margin-top: 10px;
+    
 }
