--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,7 @@
       <a routerLinkActive="menu-active" routerLink="tags-app">Tags</a>
       <a routerLinkActive="menu-active" routerLink="carousel-app">Carousels</a>
       <a routerLinkActive="menu-active" routerLink="slider-app">Slider</a>
+      <a routerLinkActive="menu-active" routerLink="notification-app">Notification</a>
     </div>
   </div>
 
