--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,7 @@
       <a routerLinkActive="menu-active" routerLink="carousel-app">Carousels</a>
       <a routerLinkActive="menu-active" routerLink="slider-app">Slider</a>
       <a routerLinkActive="menu-active" routerLink="notification-app">Notification</a>
+      <a routerLinkActive="menu-active" routerLink="timeline-app">Timeline</a>
     </div>
   </div>
 
