initial development for scheme

--- a/projects/sfc-components/src/lib/sfc-menu/dropdown/dropdown-menu-item/sfc-dropdown-menu-item.component.html
+++ b/projects/sfc-components/src/lib/sfc-menu/dropdown/dropdown-menu-item/sfc-dropdown-menu-item.component.html
@@ -1,4 +1,4 @@
-<li>
+<li (click)="onClick()">
     <i *ngIf="item.icon" style="padding-right: 10px; width: 10%;" [ngClass]="iconClass"></i>
     <a>{{item.label}}</a>
 </li>
