--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,7 @@
       <a routerLinkActive="menu-active" routerLink="notification-app">Notification</a>
       <a routerLinkActive="menu-active" routerLink="timeline-app">Timeline</a>
       <a routerLinkActive="menu-active" routerLink="chart-app">Chart</a>
+      <a routerLinkActive="menu-active" routerLink="scheme-app">Scheme</a>
     </div>
   </div>
 
